this is my second commit

--- a/index.html
+++ b/index.html
@@ -1,23 +1,17 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Welcome to nginx!</title>
 <style>
-html { color-scheme: light dark; }
-body { width: 35em; margin: 0 auto;
+html { color-scheme: blue; }
+body { width: 100em; margin: 0 auto;
 font-family: Tahoma, Verdana, Arial, sans-serif; }
 </style>
 </head>
 <body>
-<h1>Bille Christian</h1>
-<p>If you see this page, the nginx web server is successfully installed and
-working. Further configuration is required.</p>
+<h1>Name: Bille Christian Dondoyano</h1>
 
-<p>For online documentation and support please refer to
-<a href="http://nginx.org/">nginx.org</a>.<br/>
-Commercial support is available at
-<a href="http://nginx.com/">nginx.com</a>.</p>
+<h2>Section: BIT-CT 3C</h2>
 
-<p><em>Thank you for using nginx.</em></p>
+<h3>Subject: Embedded System <h3>
 </body>
 </html>
