--- a/index.html
+++ b/index.html
@@ -1,17 +1,36 @@
 <!DOCTYPE html>
 <html>
-<head>
-<style>
-html { color-scheme: blue; }
-body { width: 100em; margin: 0 auto;
-font-family: Tahoma, Verdana, Arial, sans-serif; }
-</style>
-</head>
-<body>
-<h1>Name: Bille Christian Dondoyano</h1>
+  <head>
+    <title>Welcome to nginx!</title>
+    <style>
+      #main {
+        margin: 1000px;
+        background-color: #d8e2dc;
+        min-height: 1000px;
+        text-align: center;
+        width: 100%;
+        margin: auto;
+      }
 
-<h2>Section: BIT-CT 3C</h2>
+      #my_pic img {
+        width: 500px;
+      }
 
-<h3>Subject: Embedded System <h3>
-</body>
+
+    </style>
+  </head>
+  <div id="main">
+    <div id="my_pic"><img src="bille.jpg" /></div>
+    <div id="info">
+<h1 style="color:Purple">Bille Christian Dondoyano</h1>
+
+<p style="color:Yellow">BIT-CT 3C</p>
+
+<p style="color: Green">Embedded System</p>
+        <h2>About Me</h2>
+        <h3 style="color: Orange">My name is Bille Christian Dondoyano, from Tudela. I am 20 years of age, I love singing even thou song did'nt love me</h3>
+      </div>
+    </div>
+  </div>
+  <body></body>
 </html>
